src/objects/LeanData__Territory_Segment__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Deployment_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Segment Id</label>
        <referenceTo>LeanData__Territory_Segment__c</referenceTo>
        <relationshipLabel>Deployed Territory Segment</relationshipLabel>
        <relationshipName>DeployedTerritorySegment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Draft_FileName__c</fullName>
        <label>Draft FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Draft_Upload_Status__c</fullName>
        <label>Draft Upload Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Fields_Used__c</fullName>
        <label>Fields Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__FileName__c</fullName>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LD Business Unit</label>
        <referenceTo>LeanData__LD_Business_Unit__c</referenceTo>
        <relationshipLabel>Territory Segment LD Business Unit</relationshipLabel>
        <relationshipName>Territory_Segment_LD_Business_Unit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Upload_Status__c</fullName>
        <label>Upload Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Version__c</fullName>
        <label>Version Number</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Territory Segment</label>
    <nameField>
        <label>Territory Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>